--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -68,6 +68,8 @@
             android:layout_above="@+id/editText_edad"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="23dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:gravity="center_vertical"
             android:textSize="24sp" />
 
